# Whats_My_IP_2

./: meson.build
data/: meson.build  org.mattia98.whatsmyip2.appdata.xml.in  org.mattia98.whatsmyip2.desktop.in  org.mattia98.whatsmyip2.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: analyzeOther.ui  analyzeOtherWindow.vala  main.vala  meson.build  settings.ui  settings.vala  settingsWindow.vala  whatsmyip2.gresource.xml  window.ui  window.vala
